# Widen

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.yaml  known_hosts.txt
app/: CMakeLists.txt  main.cc
client/: CMakeLists.txt
client/src/widen/client/: main.cc
common/: CMakeLists.txt
common/src/widen/: log.cc  log.hpp
common/src/widen/common/: config.cc  config.hpp  exception.cc  exception.hpp  fmt.hpp  log.cc  log.hpp  message_addon.cc  message_addon.hpp  serialization.hpp  utils.cc  utils.hpp
common/src/widen/common/proto_wrapper/: identifier.cc  identifier.hpp  join_reply.hpp  join_request.cc  join_request.hpp  join_response.cc  join_response.hpp  proto_message.cc  proto_message.hpp  proto_wrapper.cc  proto_wrapper.hpp  protomsg_wrapper.cc  protomsg_wrapper.hpp
docker/: Dockerfile  docker-compose.yaml
docs/: project_structure.md  protocol.md  style_guide.md
include/alan/: fmt.hpp  lib.hpp  log.hpp
node/: CMakeLists.txt
node/src/widen/node/: main.cc  memberlist.cc  memberlist.hpp  message_listener.cc  message_listener.hpp  node.cc  node.hpp
node/src/widen/node/distributed_fs/: distributed_fs.cc  distributed_fs.hpp
node/src/widen/node/failure_detection/: failure_detector.cc  failure_detector.hpp
node/src/widen/node/handlers/: joinRequestHandler.cc
node/src/widen/node/introducer/: introducer.cc  introducer.hpp  joinRequestHandler.cc  joinRequestHandler.hpp
playground/: CMakeLists.txt  main.cc
protos/: CMakeLists.txt
protos/widen/: CMakeLists.txt  distributed_fs.proto  failure_detection.proto  general.proto  gossip.proto  identifier.proto  introduce.proto  introducer.proto  messages.proto
scripts/: env  start_vms
src/: lib.cc  log.cc
test/: CMakeLists.txt  test_alan.cc  test_common.cc  test_proto.cc  test_protobuf.cc  test_random.cc
test/proto/: CMakeLists.txt  me.proto  person.proto
worker/: CMakeLists.txt
worker/src/widen/worker/: main.cc  message_listener.cc  message_listener.hpp  worker.cc  worker.hpp
worker/src/widen/worker/handlers/: joinRequestHandler.cc  joinRequestHandler.hpp
